deploymentRepository/ei_backends/kubernetes-ftp/ftp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ftp-http-ingress
spec:
  backend:
    serviceName: wso2-ftp-service
    servicePort: 21
